--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <input type="text" id="r_sola" value="OŠ Koseze">
     <label>Naslov šole:</label>
     <input type="text" id="r_naslov" value="Ledarska 23">
+    <label>Pošta šole:</label>
+    <input type="text" id="r_posta" value="1000 Ljubljana">
   </fieldset>
 
   <fieldset>
