--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="sl">
 <head>
   <meta charset="UTF-8">
-  <title>Opravičilo – uradno pismo</title>
+  <title>Opravičilo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Opravičilo – uradno pismo</h2>
+  <h2>Opravičilo</h2>
 
   <fieldset>
     <legend>Podatki starša / pošiljatelja</legend>
@@ -82,7 +82,6 @@
     <span id="msg" aria-live="polite"></span>
   </div>
 
-  <label>Predogled pisma:</label>
   <div id="preview" class="letter-preview" contenteditable="false"></div>
 
   <script src="script.js"></script>
